<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mshirika App</string>
    <string name="mshirika">Mshirika</string>
    <string name="account">Account</string>
    <string name="client">Client</string>
    <string name="client_">Client(s)</string>
    <string name="lost_connectivity">Internet Connection Lost</string>
    <string name="more">More</string>
    <string name="offline">Offline</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="office">Office</string>
    <string name="online">Online</string>
    <string name="search_ellipsize">Search…</string>
    <string name="available_balance">Available Balance</string>
    <string name="charge">Charge</string>
    <string name="charges">Charges</string>
    <string name="deposit">Deposit</string>
    <string name="edit">Edit</string>
    <string name="loan_balance">Loan Balance</string>
    <string name="new_loan">New Loan</string>
    <string name="loan">Loan</string>
    <string name="new_savings">New Savings</string>
    <string name="payment">Payment</string>
    <string name="transfer">Transfer</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_all">View All +</string>
    <string name="waive">Waive</string>
    <string name="waive_charge">Waive Charge</string>
    <string name="withdraw">Withdraw</string>
    <string name="beneficiary_data"><![CDATA[ID Number: %s\nDate of birth: %s\nPercent: %s%\nPhone number: %s]]></string>
    <string name="next_of_kin_data"><![CDATA[ID Number: %s\nPhone number: %s]]></string>
    <string name="family_data"><![CDATA[Phone number: %s\nDate of birth: %s\nMarital Status: %s\n]]></string>
    <string name="add">Add</string>
    <string name="add_charge">Add Charge</string>
    <string name="add_fab_desc">Add new clients, groups or centers</string>
    <string name="password">password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="username">username</string>
    <string name="centers">Centers</string>
    <string name="groups">Groups</string>
    <string name="clients">Clients</string>
    <string name="loan_accounts">Loan Accounts</string>
    <string name="savings_accounts">Savings Accounts</string>
    <string name="savings_account">Savings Account</string>
    <string name="description_required">Description*</string>
    <string name="account_type">Account Type</string>
    <string name="amount_required">Amount*</string>
    <string name="date_">Date*</string>
    <string name="date_picker_desc">Pick the date for the transfer</string>
    <string name="form_number">Form Number</string>
    <string name="loan_product">Loan Product*</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="term_options">Term Options</string>
    <string name="repayment_schedule">Repayment Schedule</string>
    <string name="principal">Principal</string>
    <string name="frequency">Frequency</string>
    <string name="loan_term_required">Loan Term*</string>
    <string name="repaid_every">Repaid Every</string>
    <string name="overdue_charges">Overdue Charges</string>
    <string name="collaterals_data">Collaterals Data</string>
    <string name="action">Action</string>
    <string name="mode_of_payment">Mode of payment</string>
    <string name="submit">Submit</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="bank_date">Banking Date</string>
    <string name="submitted_on">Submitted On</string>
    <string name="product_name">Product Name*</string>
    <string name="closed_on_required">Closed On*</string>
    <string name="confirm">Confirm</string>
    <string name="reason_for_closure">Reason For Closure</string>
    <string name="new_user">New User</string>
    <string name="parameter">Parameter*</string>
    <string name="office_required">Office*</string>
    <string name="message_required">Message*</string>
    <string name="send">Send</string>
    <string name="note">Note</string>
    <string name="transfer_date">Date of Transfer</string>
    <string name="staff_required">Staff*</string>
    <string name="upload">Upload</string>
    <string name="select_file">Select File</string>
    <string name="legal_form">Legal Form*</string>
    <string name="download">Download</string>
    <string name="last_name_">Last Name*</string>
    <string name="first_name_">First Name*</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="pick_date_desc">Pick date of birth from the calendar</string>
    <string name="pick_client_image_desc">Pick client image</string>
    <string name="member_no">Member number</string>
    <string name="member_no_resource">Member number: %1$s</string>
    <string name="mobile_no">Mobile number</string>
    <string name="valid_phone">+%1$s</string>
    <string name="gender">Gender</string>
    <string name="is_staff_">Is Staff?</string>
    <string name="is_staff">Is Staff</string>
    <string name="client_type">Client Type</string>
    <string name="client_classification">Client Classification</string>
    <string name="submit_date">Submitted On</string>
    <string name="email_address">Email Address</string>
    <string name="active">Active?</string>
    <string name="activation_date">Activation Date</string>
    <string name="activation_date_">Activation Date*</string>
    <string name="open_savings_account">Open Savings Account</string>
    <string name="savings_product">Savings Product*</string>
    <string name="national_id_no">National ID Number</string>
    <string name="full_name_">Full Name*</string>
    <string name="relationship_">Relationship*</string>
    <string name="marital_status_">Marital Status*</string>
    <string name="go_to_next_page">Go to next page</string>
    <string name="go_to_previous_page">Go to previous page</string>
    <string name="address_type_">Address Type*</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="county">County</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="key_in_your_credentials_to_sign_in">Key in your credentials to sign in</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="my_savings">My Savings</string>
    <string name="my_loans">My Loans</string>
    <string name="retry" tools:override="true">Retry</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="make_payment">Make Payment</string>
    <string name="office_name">Office: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="external_id">External ID: %1$s</string>
    <string name="external_identification">External ID</string>
    <string name="account_no">"Account No: %1$s"</string>
    <string name="client_card_transition_name">Client Card Details</string>
    <string name="client_item_card">Client Card %d</string>
    <string name="loan_card_transition_name">Loan Card Details</string>
    <string name="loan_item_card">Loan Card %d</string>
    <string name="center_card_transition_name">Center Card Details</string>
    <string name="center_item_card">Center Card %d</string>
    <string name="transition_card_transition_name">Transition Card Details</string>
    <string name="transition_item_card">Transition Card %d</string>
    <string name="group_card_transition_name">Group Card Details</string>
    <string name="group_item_card">group Card %d</string>
    <string name="desc_create_client">Create A New Client</string>
    <string name="desc_create_group">Create A New Group</string>
    <string name="desc_create_center">Create A New Center</string>
    <string name="client_s_member_number">Client\'s Member Number</string>
    <string name="loans">Loans</string>
    <string name="searching_card">Searching Card</string>
    <string name="search_fragment_card">Card For Searching Fragment</string>
    <string name="search_icon">Search Icon</string>
    <string name="center">Center</string>
    <string name="group">Group</string>
    <string name="make_repayment">Repay</string>
    <string name="repayment_date">Repayment Date</string>
    <string name="transactions">Transactions</string>
    <string name="balance">balance</string>
    <string name="_balance">Balance</string>
    <string name="loan_date">Loan Date</string>
    <string name="due_date">Due Date</string>
    <string name="amount_due">Amount Due</string>
    <string name="amount_due_val">Amount Due: %1$,.0f</string>
    <string name="receipt_no_">Receipt No*</string>
    <string name="receipt_no">Receipt No</string>
    <string name="payment_type">Payment Type</string>
    <string name="field_cannot_be_empty">%s cannot be  empty</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="error_making_repayment">Error Making Repayment!</string>
    <string name="add_client">New Client</string>
    <string name="add_group">New Group</string>
    <string name="add_center">New Center</string>
    <string name="create_client_transition">Create_Client_Background_Card</string>
    <string name="create_group_transition">Create_Group_Background_Card</string>
    <string name="create_center_transition">Create_Center_Background_Card</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="prev">Prev</string>
    <string name="email_pattern_error">Please enter a valid email address!</string>
    <string name="create_client">Create Client</string>
    <string name="add_family_member">Add family member</string>
    <string name="family_members">Family Members</string>
    <string name="general_data">General Data</string>
    <string name="pick_image">Pick Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="create_group">Create Group</string>
    <string name="create_center">Create Center</string>
    <string name="group_name_">Group Name*</string>
    <string name="center_name_">Center Name*</string>
    <string name="is_active">Active</string>
    <string name="repayment_successful">Repayment Successful</string>
    <string name="group_created">Group Created Successfully!</string>
    <string name="center_created">Center Created Successfully!</string>
    <string name="send_sms">Send SMS</string>
    <string name="next_of_kin_s_name">name</string>
    <string name="next_of_kin_s_relationship">relationship</string>
    <string name="next_of_kin_s_phone_number">phone number</string>
    <string name="next_of_kin_s_id_number">ID number</string>
    <string name="add_beneficiary">Add beneficiary</string>
    <string name="name">name</string>
    <string name="relationship">relationship</string>
    <string name="phone_number">phone number</string>
    <string name="id_number">ID number</string>
    <string name="percentage_allocation">percentage allocation</string>
    <string name="add_next_of_kin">Add next of kin</string>
    <string name="marital_status">marital status</string>
    <string name="is_dependent">Is dependent?</string>
    <string name="filter">Filter</string>
    <string name="by_action">By Action</string>
    <string name="by_entity">By Entity</string>
    <string name="by_date">By Date</string>
    <string name="none">None</string>
</resources>