<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit" />

    <item
        android:id="@+id/new_loan"
        android:icon="@drawable/ic_round_attach_money_24"
        android:title="@string/new_loan" />

    <item
        android:id="@+id/deposit"
        android:title="@string/deposit"
        android:visible="false" />
    <item
        android:id="@+id/withdraw"
        android:title="@string/withdraw"
        android:visible="false" />
    <item
        android:id="@+id/charge"
        android:title="@string/charge" />
    <item
        android:id="@+id/transfer"
        android:title="@string/transfer" />

    <item
        android:id="@+id/send_sms"
        android:title="@string/send_sms" />

    <item
        android:id="@+id/more"
        android:title="@string/more" />
</menu>