<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter_tasks"
        android:icon="@drawable/ic_round_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/by_action"
                android:title="@string/by_action" />

            <item
                android:id="@+id/by_entity"
                android:title="@string/by_entity" />

            <item
                android:id="@+id/by_date"
                android:visible="false"
                android:title="@string/by_date" />

            <item
                android:id="@+id/none"
                android:title="@string/none" />
        </menu>
    </item>
</menu>