<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_fragments"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_homeFragment_to_clientFragment"
            android:icon="@drawable/ic_round_person_outline_24"
            android:onClick=""
            android:title="@string/clients" />

        <item
            android:id="@+id/groups"
            android:icon="@drawable/ic_baseline_people_outline_24"
            android:title="@string/groups" />

        <item
            android:id="@+id/center"
            android:icon="@drawable/ic_round_apartment_24"
            android:title="@string/centers" />
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/loans"
            android:title="@string/loans" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/subtitle"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/item1"
                    android:title="Item 1" />
            </menu>
        </item>
    </group>


    <item
        android:id="@+id/settings"
        android:title="Settings" />

    <item
        android:id="@+id/about"
        android:title="About" />
</menu>