<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_name_lo"
        style="?textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fam_name"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_relationship_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle">


        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/fam_relationship"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/relationship" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_phone_number_lo"
        style="?textInputOutlinedStyle"
        app:prefixText="+254">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fam_phone_number"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_id_number_lo"
        style="?textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fam_id_number"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_number"
            android:inputType="phone|number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_dob_lo"
        style="?textInputOutlinedDateStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fam_dob"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="phone|number" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/fam_gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/is_dependent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_dependent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fam_marital_status_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/fam_marital_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital_status"
            android:inputType="phone|number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_family_member" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        app:flow_horizontalStyle="spread_inside"
        app:constraint_referenced_ids="fam_name_lo,fam_relationship_lo,fam_phone_number_lo,fam_id_number_lo,fam_dob_lo,fam_gender_group,is_dependent,fam_marital_status_lo,submit"
        app:flow_horizontalBias="0"
        app:flow_verticalGap="5dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>