<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="16dp"
    tools:ignore="Deprecated">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name_lo"
        style="?textInputOutlinedDenseStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/full_name_" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob_lo"
        style="?textInputOutlinedDenseStyle"
        app:endIconContentDescription="@string/pick_date_desc"
        app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date_of_birth" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relationship_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="none"
            android:hint="@string/relationship_" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".49">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:inputType="none"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/gender" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/marital_status_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".49">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/marital_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:editable="false"
            android:hint="@string/marital_status_" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:enabled="false"
        android:onClick="@{frag.submit}"
        android:text="@string/submit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/family_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@android:layout/simple_list_item_1" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="full_name_lo,dob_lo,relationship_lo,gender_lo,marital_status_lo,submit,family_members"
        app:flow_horizontalStyle="spread_inside"
        app:flow_verticalGap="5dp"
        app:flow_horizontalGap="5dp"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>