<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nok_name_lo"
        style="?textInputOutlinedStyle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nok_name"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/next_of_kin_s_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nok_relationship_lo"
        style="?textInputOutlinedExposedDropdownMenuStyle">


        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/nok_relationship"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/next_of_kin_s_relationship" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nok_id_number_lo"
        style="?textInputOutlinedStyle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nok_id_number"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/next_of_kin_s_id_number"
            android:inputType="phone|number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nok_phone_number_lo"
        style="?textInputOutlinedStyle"
        app:prefixText="+254">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nok_phone_number"
            style="?textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/next_of_kin_s_phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_next_of_kin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_next_of_kin" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        app:constraint_referenced_ids="nok_name_lo,nok_relationship_lo,nok_id_number_lo,nok_phone_number_lo,add_next_of_kin"
        app:flow_verticalGap="5dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>